# CHORD-Circadian-Harmonic-Oscillation-Resolution-and-Disentanglement

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: BENCHMARK_DESIGN.md  CHORD_USER_MANUAL.md
results/benchmark_v9/: cross_species_metrics.csv  efficiency_metrics.csv  noise_chord_v9.csv  recovery_metrics.csv  robustness_ds_rates.csv  robustness_noise_rates.csv  synthetic_metrics.csv  synthetic_results.csv  tier1_metrics.csv
scripts/: analysis_bmal1ko_narrative.py  analysis_multi_tissue.py  analysis_zhang2014_multi_tissue.py  analyze_results.py  benchmark_figures.py  benchmark_final.py  benchmark_pub_figures.py  bmal1ko_validation.py  cross_validation.py  robustness_v9.py  run_full_benchmark.sh  sensitivity_analysis.py
src/chord/: __init__.py  cli.py  pipeline.py
src/chord/analysis/: __init__.py  run_bhdt_ovary.py
src/chord/benchmarks/: __init__.py  metrics.py  plot_benchmark.py  run_benchmark.py  significance.py  wrappers.py
src/chord/bhdt/: __init__.py  bispectral.py  bootstrap.py  calibration.py  classifier.py  cross_gene_phase.py  detect.py  disentangle.py  fusion_classifier.py  hierarchical_classifier.py  hilbert_if.py  inference.py  mcmc.py  models.py  nonparametric_detect.py  phase_test.py  pipeline.py  population_independence.py  replicate_phase.py  savage_dickey.py  sid.py  utils.py  vmd.py
src/chord/bhdt/detection/: __init__.py  cauchy_combination.py  stage1_detector.py
src/chord/data/: brooks2023_loader.py  geo_loader.py  known_genes.py  zhu2024_loader.py
src/chord/ensemble/: __init__.py  integrator.py  weight_learner.py
src/chord/network/: __init__.py  co_oscillation.py  hierarchical.py
src/chord/pinod/: __init__.py  analysis.py  batch_gpu.py  damping.py  decompose.py  goodwin_ode.py  networks.py  oscillator.py  trainer.py
src/chord/r_interface/: __init__.py  chord.R
src/chord/simulation/: __init__.py  generator.py
src/chord/validation/: validate_hughes2009.py  validate_mure2018.py  validate_zhu2023.py
tests/: test_bhdt.py  test_bispectral.py  test_cauchy_combination.py  test_classifier.py  test_cross_gene_phase.py  test_data_loader.py  test_ensemble_e2e.py  test_fusion_classifier.py  test_goodwin_ode.py  test_hierarchical_classifier.py  test_hilbert_if.py  test_integration_new_modules.py  test_modules.py  test_new_wrappers.py  test_pinod_synthetic.py  test_population_independence.py  test_replicate_phase.py  test_savage_dickey.py  test_sid.py  test_soft_gate.py  test_stage1_detector.py  test_validation.py  test_vmd.py  test_zhu2024_loader.py
